plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 이번 예제에서는 JPA를 사용
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// validation 적용을 위해 사용
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// DB는 postgresql을 사용
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}